fixed some spacing

--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ header {
   color: #fff;
 }
 
-input, textarea {
+input, textarea, select {
   border: 2px solid #6e8c62;
 }
 
